# euskopy

./: .gitignore  Cargo.toml  README.md
adibideak/: factorial.eus  fibonnaci.eus  lehena.eus
src/: main.rs
